--- a/src/home/home.module.css
+++ b/src/home/home.module.css
@@ -25,3 +25,61 @@
   width: 100%;
   z-index: -1;
 }
+
+/* ========================= */
+.left_side_image {
+  position: absolute;
+  overflow: hidden;
+  animation: example infinite 7s linear;
+  z-index: -1;
+}
+.right_side_image {
+  position: absolute;
+  overflow: hidden;
+  right: 0;
+  animation: example infinite 7s linear;
+  z-index: -1;
+}
+
+/* ++++++++++++++++++++++++++++++++++++++ */
+/* 
+.side_img {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+}
+.side_img::before {
+  content: '';
+  top: 0;
+  left: 0;
+  background: url('../asset/Left.png') no-repeat left;
+  background-size: contain;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+.side_img::after {
+  content: '';
+  top: 0;
+  right: 0;
+  background: url('../asset/Left.png') repeat-y right;
+  background-repeat: repeat-y;
+  background-size: contain;
+  position: absolute;
+  height: 200px;
+  width: 300px;
+  z-index: -1;
+  animation: example infinite 1s linear;
+} */
+
+@keyframes example {
+  from {
+    /* transform: translateY(100%); */
+    margin-top: 0;
+  }
+  to {
+    /* transform: translateY(0%); */
+    margin-top: -1000px;
+  }
+}
